--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.9",
     "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5"
