--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
     "outDir": "./dist",
     "rootDir": "./src",
+    "typeRoots": ["./node_modules/@types", "./src/types"],
 
     /* Projects */
     // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
